Fixed stuff: - Adjust footer side-paddings on different screen sizes - Adjust Support section 2 styles - On Tracking: Make dropdown take full width on small screens - On Tracking: Change dropdown to open upward on small screens

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -54,6 +54,22 @@ footer.footer img {
   filter: brightness(0) invert(1); 
 }
 
+@media (min-width: 1200px) {
+
+  #footer-box .footer-out-container {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+}
+
+@media (max-width: 1024px) and (min-width: 992px) {
+
+  #footer-box .footer-out-container {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+}
+
 @media (max-width: 600px) {
 
   #footer-box {
